# LuxonServer

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS  LICENSE  README.md  compatibility.txt  config.example.yml  grafana-dashboard.json  index.html  process_web.js  stats.html  style.css  template.html  vcpkg.json
WASMImpl/C/: alloca.h  main-djgpp.c  math.h  sockets.c  wasi.c  wasm-rt-mem-impl-helper.inc  wasm-rt.h
WASMImpl/Java/: pom.xml
WASMImpl/Java/src/main/java/com/gitlab/luxon_project/: LuxonServer.java
ffi_include/: luxon_server_ffi.h  luxon_server_ffi_exports.inc  luxon_server_ffi_imports.inc
include/luxon/server/: apps.hpp  auth_plugin_registry.hpp  authentication.hpp  codes.hpp  coroutine.hpp  data_model.hpp  game.hpp  game_plugin_base.hpp  game_plugin_registry.hpp  global.hpp  handler_base.hpp  handler_gameserver.hpp  handler_masterserver.hpp  handler_nameserver.hpp  hookpoints.hpp  http_server.hpp  lobby.hpp  logger.hpp  metrics.hpp  offset_map.hpp  peer.hpp  peer_persistence.hpp  server_manager.hpp  settings_manager.hpp  sidethread.hpp  sock_selector.hpp  sqlite3pp.hpp  string_hash.hpp
src/: apps.cpp  auth_plugin_registry.cpp  authentication.cpp  coroutine.cpp  ffi.cpp  game.cpp  game_plugin_base.cpp  game_plugin_registry.cpp  handler_base.cpp  handler_gameserver.cpp  handler_masterserver.cpp  handler_nameserver.cpp  http_server.cpp  incbin.h  lobby.cpp  lobby_vt.cpp  lobby_vt.hpp  logger.cpp  main.cpp  metrics.cpp  peer.cpp  peer_persistence.cpp  platform.cpp  platform.hpp  server_manager.cpp  settings_manager.cpp  sock_selector.cpp  sqlite3-config.h  sqlite3pp.cpp  tracy_mem.cpp
web/: index.html  stats.html
